Added puzzler 25 ('$!.*% Iterators!'). Thanks, Dan!

--- a/about.html
+++ b/about.html
@@ -126,6 +126,7 @@
               <li><a href="/#pzzlr-022" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
               <li><a href="/#pzzlr-023" id="pzzlr-023">Information Overload</a></li>
               <li><a href="/#pzzlr-024" id="pzzlr-024">What's In a Name?</a></li>
+              <li><a href="/#pzzlr-025" id="pzzlr-025">$!.*% Iterators!</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
