--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
               <li><a href="#" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
               <li><a href="#" id="pzzlr-023">Information Overload</a></li>
               <li><a href="#" id="pzzlr-024">What's In a Name?</a></li>
+              <li><a href="#" id="pzzlr-025">$!.*% Iterators!</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
