Describing Scala Puzzlers as "the collection" rather than a "central repository"

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 	      <div class="headline">
                 <h1>A fun way to learn more about
 	        <img src="img/scala-logo.png" alt="Scala" style="padding-bottom:15px;padding-left:10px"/></h1><br/>
-                <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in the Scala language.<br/><br/>
+                <p>Welcome to Scala Puzzlers, the collection of <i>Traps, Pitfalls and Corner Cases</i> in the Scala language.<br/><br/>
 		Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate that there's plenty of head-scratching left in Scala. Let your mind be challenged by unexpected and unintuitive behaviour and results and learn something in the process. 		
 <br/><br/>
             Choose a puzzler from the left-hand list to get started!</p>
