Added puzzler 27: "Keep On Padding". Thanks, @som-snytt!

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               <li><a href="#" id="pzzlr-023">Information Overload</a></li>
               <li><a href="#" id="pzzlr-024">What's In a Name?</a></li>
               <li><a href="#" id="pzzlr-025">$!.*% Iterators!</a></li>
+              <li><a href="#" id="pzzlr-027">Keep On Padding</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
