Aligned formatting of answers with e.g. puzzler 23

--- a/puzzlers/pzzlr-027.html
+++ b/puzzlers/pzzlr-027.html
@@ -34,15 +34,18 @@ val sb2 = new StringBuilder("Hello!")
 println(padTo(20)(sb2))
   </pre>
   <ol>
-<li><pre class="prettyprint lang-scala">
+<li>Prints:
+<pre class="prettyprint lang-scala">
 Hello, kitteh!*
 Hello!*
 </pre></li>
-<li id="correct-answer"><pre class="prettyprint lang-scala">
+<li id="correct-answer">Prints:
+<pre class="prettyprint lang-scala">
 Hello, kitteh!*
 Fails with a runtime exception
 </pre></li>
-<li><pre class="prettyprint lang-scala">
+<li>Prints:
+<pre class="prettyprint lang-scala">
 Hello, kitteh!******
 Hello!**************
 </pre></li>
