Corrected formatting of answers on puzzler 27

--- a/puzzlers/pzzlr-027.html
+++ b/puzzlers/pzzlr-027.html
@@ -39,10 +39,9 @@ println(padTo(20)(sb2))
 Hello, kitteh!*
 Hello!*
 </pre></li>
-<li id="correct-answer">Prints:
+<li id="correct-answer">The second fails with a runtime exception, and the first prints:
 <pre class="prettyprint lang-scala">
 Hello, kitteh!*
-Fails with a runtime exception
 </pre></li>
 <li>Prints:
 <pre class="prettyprint lang-scala">
