Updated attribution of 27 as requested (https://github.com/scalapuzzlers/scalapuzzlers.github.com/pull/56#issuecomment-10167725)

--- a/puzzlers/pzzlr-027.html
+++ b/puzzlers/pzzlr-027.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td class="header-column"><strong>Contributed by</strong></td>
-      <td>A. P. Marki<br/>Updated based on suggestions by Luc Bourlier</td>
+      <td>Based on a submission by A. P. Marki<br/>Updated based on suggestions by Luc Bourlier</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
