--- a/puzzlers/pzzlr-017.html
+++ b/puzzlers/pzzlr-017.html
@@ -23,8 +23,8 @@
 class C
 val x1,x2 = new C
 val y1@y2 = new C
-println(x1 == x2)
-println(y1 == y2)
+println(x1 eq x2)
+println(y1 eq y2)
 </pre>
 
 <ol>
@@ -65,7 +65,7 @@ true
 According to the SLS (section 4.1), a value definition <tt>val p1, . . . , pn : T = e</tt> is a shorthand for 
 the sequence of value definitions <tt>val p1 : T = e; ...; val pn : T = e</tt>. 
 This means that in our example the expression <tt>new C</tt> is evaluated twice
-and therefore <tt>x1 == x2</tt> is <tt>false</tt>.
+and therefore <tt>x1 eq x2</tt> is <tt>false</tt>.
 </p><p>
 The second value definition is a pattern binder which is defined in section 8.1.3 of the SLS.
 A pattern binder <tt>x@p</tt> consists of a pattern variable <tt>x</tt> and a pattern <tt>p</tt>.
@@ -73,6 +73,6 @@ In our case the pattern <tt>p</tt> is a variable pattern which matches any value
 the variable name (in our case <tt>y2</tt>) to that value. The pattern binder binds that 
 value also to the pattern variable <tt>y1</tt>. 
 As the same value is bound to both variables <tt>y1</tt> and <tt>y2</tt>,
-the expression <tt>y1 == y2</tt> is <tt>true</tt>.
+the expression <tt>y1 eq y2</tt> is <tt>true</tt>.
 </p>
 </div>
