Added Puzzler 28 ("Cast Away"). Thanks, Vassil for the submission and Daniel Sobral and Paul Phillips for comments!

--- a/about.html
+++ b/about.html
@@ -127,7 +127,9 @@
               <li><a href="/#pzzlr-023" id="pzzlr-023">Information Overload</a></li>
               <li><a href="/#pzzlr-024" id="pzzlr-024">What's In a Name?</a></li>
               <li><a href="/#pzzlr-025" id="pzzlr-025">$!.*% Iterators!</a></li>
+              <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
               <li><a href="/#pzzlr-027" id="pzzlr-027">Keep On Padding</a></li>
+              <li><a href="/#pzzlr-028" id="pzzlr-028">Cast Away</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
