Replaced one of the answers for #16 with 'Does not compile', which seems to be a common reaction

--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -43,12 +43,7 @@ println(s2.length)
 </pre>
 </li>
 
-<li>Prints:
-<pre class="prettyprint lang-scala">
-4
-8
-</pre>
-</li>
+<li>Fails with a compilation exception</li>
 </ol>
 
 </div>
