Slight update to 'Does not compile' answer for #16

--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -43,7 +43,7 @@ println(s2.length)
 </pre>
 </li>
 
-<li>Fails with a compilation exception</li>
+<li>Both fail with compilation exceptions</li>
 </ol>
 
 </div>
