--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <li><a href="#" id="pzzlr-024">What's In a Name?</a></li>
               <li><a href="#" id="pzzlr-025">$!.*% Iterators!</a></li>
               <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
-              <li><a href="#" id="pzzlr-027">Keep On Padding</a></li>
+              <li><a href="#" id="pzzlr-027">I Can Has Padding?</a></li>
               <li><a href="#" id="pzzlr-028">Cast Away</a></li>
               <li class="divider"></li>
             </ul>
