--- a/puzzlers/pzzlr-009.html
+++ b/puzzlers/pzzlr-009.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/a/4416436/465304">StackOverflow</a></td>
+      <td><a target="_blank" href="http://stackoverflow.com/a/4416436/465304">stackoverflow</a></td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
