--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
               <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
               <li><a href="#" id="pzzlr-027">I Can Has Padding?</a></li>
               <li><a href="#" id="pzzlr-028">Cast Away</a></li>
+              <li><a href="#" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
