--- a/contact.html
+++ b/contact.html
@@ -130,6 +130,7 @@
               <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
               <li><a href="/#pzzlr-027" id="pzzlr-027">I Can Has Padding?</a></li>
               <li><a href="/#pzzlr-028" id="pzzlr-028">Cast Away</a></li>
+              <li><a href="/#pzzlr-029" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
