Cleaning up HTML attribute

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 </head>
 
-<body data-spy="scroll" data-target=".subnav" data-offset="50"">
+<body data-spy="scroll" data-target=".subnav" data-offset="50">
   <!-- Navbar
    ================================================== -->
     <div class="navbar navbar-fixed-top">
