--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
  </script>
 </head>
 
-<body data-spy="scroll" data-target=".subnav" data-offset="50"">
+<body data-spy="scroll" data-target=".subnav" data-offset="50">
   <!-- Navbar
    ================================================== -->
     <div class="navbar navbar-fixed-top">
