--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,9 @@
                 <a id="navbar-home" href="index.html">Home</a>
               </li>
               <li>
+                <a id="navbar-archive" href="archive.html">Archive</a>
+              </li>
+              <li>
                 <a id="navbar-contribute" href="contribute.html">How to Contribute</a>
               </li>
               <li>
@@ -69,6 +72,7 @@
       var pathToID = {
         "/"                        : '#navbar-home',
         "index.html"              : '#navbar-home', 
+        "archive.html"              : '#navbar-archive',
         "contribute.html"	 : '#navbar-contribute',   
         "contact.html"         	 : '#navbar-contact',
 	"about.html"		 : '#navbar-about'
