--- a/archive.html
+++ b/archive.html
@@ -119,6 +119,7 @@
             <ul class="nav nav-list">
               <li class="nav-header">Puzzlers</li>
               <li class="nav-header">2.9</li>
+              <li><a href="#" id="pzzlr-002">Match Me</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
