Renaming puzzler 7 ('Seeing Double') to 'Arg Arrgh!' to avoid confusion with Double-related puzzlers

--- a/contribute.html
+++ b/contribute.html
@@ -112,7 +112,7 @@
               <li><a href="/#pzzlr-004" id="pzzlr-004">The Trouble With Traits</a></li>
               <li><a href="/#pzzlr-005" id="pzzlr-005">The Trouble With Traits 2</a></li>
               <li><a href="/#pzzlr-006" id="pzzlr-006">The Missing List</a></li>  
-              <li><a href="/#pzzlr-007" id="pzzlr-007">Seeing Double</a></li>
+              <li><a href="/#pzzlr-007" id="pzzlr-007">Arg Arrgh!</a></li>
               <li><a href="/#pzzlr-008" id="pzzlr-008">Captured by Closures</a></li>
               <li><a href="/#pzzlr-009" id="pzzlr-009">Map Comprehension</a></li>
               <li><a href="/#pzzlr-010" id="pzzlr-010">Init You, Init Me</a></li>
