--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <li><a href="#" id="pzzlr-004">The Trouble With Traits</a></li>
               <li><a href="#" id="pzzlr-005">The Trouble With Traits 2</a></li>
               <li><a href="#" id="pzzlr-006">The Missing List</a></li>  
-              <li><a href="#" id="pzzlr-007">Seeing Double</a></li>
+              <li><a href="#" id="pzzlr-007">Arg Arrgh!</a></li>
               <li><a href="#" id="pzzlr-008">Captured by Closures</a></li>
               <li><a href="#" id="pzzlr-009">Map Comprehension</a></li>
               <li><a href="#" id="pzzlr-010">Init You, Init Me</a></li>
