--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
               <li><a href="#" id="pzzlr-027">I Can Has Padding?</a></li>
               <li><a href="#" id="pzzlr-028">Cast Away</a></li>
               <li><a href="#" id="pzzlr-029">Pick an Int, Any Int!</a></li>
+              <li><a href="#" id="pzzlr-030">Double Trouble</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
