--- a/contact.html
+++ b/contact.html
@@ -134,6 +134,7 @@
               <li><a href="/#pzzlr-027" id="pzzlr-027">I Can Has Padding?</a></li>
               <li><a href="/#pzzlr-028" id="pzzlr-028">Cast Away</a></li>
               <li><a href="/#pzzlr-029" id="pzzlr-029">Pick an Int, Any Int!</a></li>
+              <li><a href="/#pzzlr-030" id="pzzlr-030">Double Trouble</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
