Adding puzzler 31 ('Double Take') to the 2.9 archive

--- a/archive.html
+++ b/archive.html
@@ -120,6 +120,7 @@
               <li class="nav-header">Puzzlers</li>
               <li class="nav-header">2.9</li>
               <li><a href="#" id="pzzlr-002">Match Me</a></li>
+              <li><a href="#" id="pzzlr-031">Double Take</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
