029: Fix line-item numbering.

--- a/puzzlers/pzzlr-029.html
+++ b/puzzlers/pzzlr-029.html
@@ -30,7 +30,7 @@ println(b.x)
 val bX = b.x
 println(bX)
 </pre>
-  <ol>The first fails at runtime with a NullPointerException, the second prints:
+  <ol><li>The first fails at runtime with a NullPointerException, the second prints:
 <pre class="prettyprint lang-scala">
 0
 </pre>
@@ -52,6 +52,7 @@ null
 null
 0
 </pre>
+  </li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
