--- a/about.html
+++ b/about.html
@@ -135,6 +135,7 @@
               <li><a href="/#pzzlr-028" id="pzzlr-028">Cast Away</a></li>
               <li><a href="/#pzzlr-029" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li><a href="/#pzzlr-030" id="pzzlr-030">Double Trouble</a></li>
+              <li><a href="/#pzzlr-032" id="pzzlr-032">Type Extortion</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
