--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               <li><a href="#" id="pzzlr-028">Cast Away</a></li>
               <li><a href="#" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li><a href="#" id="pzzlr-030">Double Trouble</a></li>
+              <li><a href="#" id="pzzlr-032">Type Extortion</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
