--- a/contribute.html
+++ b/contribute.html
@@ -136,6 +136,7 @@
               <li><a href="/#pzzlr-029" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li><a href="/#pzzlr-030" id="pzzlr-030">Double Trouble</a></li>
               <li><a href="/#pzzlr-032" id="pzzlr-032">Type Extortion</a></li>
+              <li><a href="/#pzzlr-034" id="pzzlr-034">All's Well That Folds Well</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
