Adding puzzler 35: 'A Case of Strings'

--- a/puzzlers/pzzlr-035.html
+++ b/puzzlers/pzzlr-035.html
@@ -42,7 +42,7 @@ String of length 0
 <pre class="prettyprint lang-scala">
 Not a string
 </pre>
-      and the second fails with a NullPointerException
+      and the second fails with a <tt>NullPointerException</tt>
     </li>
     <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
@@ -54,7 +54,7 @@ Not a string
 <pre class="prettyprint lang-scala">
 String of length 6
 </pre>
-      and the second fails with a NullPointerException
+      and the second fails with a <tt>NullPointerException</tt>
     </li>
   </ol>
 </div>
