--- a/contribute.html
+++ b/contribute.html
@@ -137,6 +137,7 @@
               <li><a href="/#pzzlr-030" id="pzzlr-030">Double Trouble</a></li>
               <li><a href="/#pzzlr-032" id="pzzlr-032">Type Extortion</a></li>
               <li><a href="/#pzzlr-034" id="pzzlr-034">All's Well That Folds Well</a></li>
+              <li><a href="/#pzzlr-035" id="pzzlr-035">A Case of Strings</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
