--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
               <li><a href="#" id="pzzlr-030">Double Trouble</a></li>
               <li><a href="#" id="pzzlr-032">Type Extortion</a></li>
               <li><a href="#" id="pzzlr-034">All's Well That Folds Well</a></li>
+              <li><a href="#" id="pzzlr-035">A Case of Strings</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
