--- a/puzzlers/pzzlr-035.html
+++ b/puzzlers/pzzlr-035.html
@@ -68,16 +68,26 @@ String of length 6
 val s: String = null  // perfectly fine
 println(s.isInstanceOf[String]) // prints "false" since, as in Java, null instanceof String == false
 </pre>
-    This then drives the pattern matching resolution. Therefore, if you pattern match against a value that may be <tt>null</tt>, you explicitly need to check for <tt>null</tt> value <em>first</em>:
+    This then drives the pattern matching resolution. Therefore, if you pattern match against a value that may be <tt>null</tt>, you explicitly need to check for <tt>null</tt> value:
 <pre class="prettyprint lang-scala">
 a match {
-  case null => println("Got null!")
   case s: String => println("String of length " + s.length)
-  ...
+  case null      => println("Got null!")
+  case _         => println("Something else...")
 }
 </pre>
   </p>
   <p>
     Pattern matching resolution is based on the <em>runtime</em>-type, so the first example matches the <tt>s: String</tt> case even though the <em>compile-</em>time type is <tt>java.lang.Object</tt>.
   </p>
+  <p>
+    A good Scala idiom is to convert the &quot;maybe-<tt>null</tt>&quot; from a Java API to an <a href="http://www.scala-lang.org/api/current/scala/Option.html" target="_blank"><tt>Option</tt></a>:
+  </p>
+<pre class="prettyprint lang-scala">
+val str: Option[String] = Option(stringFromJava)
+str match {
+  case Some(s: String) => println("String of length " + s.length)
+  case None => println("stringFromJava was null")
+}
+</pre>
 </div>
