--- a/contact.html
+++ b/contact.html
@@ -1,161 +1,15 @@
-<!DOCTYPE html>
-<html lang="en"> 
+---
+layout: default
+---
 
-<head> 
-<title> Scala Puzzlers </title>
- <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
- <link href="css/bootstrap.min.css" rel="stylesheet">
- <link href="css/prettify.css" type="text/css" rel="stylesheet" />
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
- <script type="text/javascript" src="js/prettify.js"></script>
- <script type="text/javascript">
-
-   var _gaq = _gaq || [];
-   _gaq.push(['_setAccount', 'UA-31486114-1']);
-   _gaq.push(['_trackPageview']);
-
-   (function() {
-     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-   })();
-  
-
- </script>
-</head>
-
-<body data-spy="scroll" data-target=".subnav" data-offset="50">
-  <!-- Navbar
-   ================================================== -->
-    <div class="navbar navbar-fixed-top">
-      <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" 								      alt="Fork me on GitHub">
-      </a>
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-
-	  <a class="brand" href="/">Scala ?uzz<img src="img/l.png" alt="l" style="padding-bottom:10px;padding-left:2px;padding-right:2px"/>ers</a>
-
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li>
-                <a id="navbar-home" href="index.html">Home</a>
-              </li>
-              <li>
-                <a id="navbar-archive" href="archive.html">Archive</a>
-              </li>
-              <li>
-                <a id="navbar-contribute" href="contribute.html">How to Contribute</a>
-              </li>
-              <li>
-                <a id="navbar-contact" href="contact.html">Contact</a>
-              </li>
-	      <li>
-		<a id="navbar-about" href="about.html">About</a>
-	      </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script type="text/javascript">
-      String.prototype.endsWith = function(suffix) {
-        return this.indexOf(suffix, this.length - suffix.length) !== -1;
-      };
-
-      var pathToID = {
-        "/"                        : '#navbar-home',
-        "index.html"              : '#navbar-home', 
-        "archive.html"              : '#navbar-archive',
-        "contribute.html"	 : '#navbar-contribute',   
-        "contact.html"         	 : '#navbar-contact',
-	"about.html"		 : '#navbar-about'
-      };
-
-      $(document).ready(function() {
-        function mapPathToID(path) {
-          var key;
-          var id = null;
-          for (key in pathToID) {
-            if (path === key) {
-              id = pathToID[key];
-              break;
-            }
-          }
-
-          return id;
-        };
-
-        var id = mapPathToID(window.location.pathname);
-        if (id != null) {
-          $(id).addClass("active");
-        }
-      });
-
-     
-    </script>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Puzzlers</li>
-              <li><a href="/#pzzlr-001" id="pzzlr-001">Hi There!</a></li>
-              <li><a href="/#pzzlr-003" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
-              <li><a href="/#pzzlr-004" id="pzzlr-004">The Trouble With Traits</a></li>
-              <li><a href="/#pzzlr-005" id="pzzlr-005">The Trouble With Traits 2</a></li>
-              <li><a href="/#pzzlr-006" id="pzzlr-006">The Missing List</a></li>  
-              <li><a href="/#pzzlr-007" id="pzzlr-007">Arg Arrgh!</a></li>
-              <li><a href="/#pzzlr-008" id="pzzlr-008">Captured by Closures</a></li>
-              <li><a href="/#pzzlr-009" id="pzzlr-009">Map Comprehension</a></li>
-              <li><a href="/#pzzlr-010" id="pzzlr-010">Init You, Init Me</a></li>
-              <li><a href="/#pzzlr-011" id="pzzlr-011">A Case of Equality</a></li>
-              <li><a href="/#pzzlr-012" id="pzzlr-012">If At First You Don't Succeed...</a></li>
-              <li><a href="/#pzzlr-013" id="pzzlr-013">To Map, or Not to Map</a></li>
-              <li><a href="/#pzzlr-015" id="pzzlr-015">Private Lives</a></li>
-              <li><a href="/#pzzlr-016" id="pzzlr-016">Self: See 'Self'</a></li>
-              <li><a href="/#pzzlr-017" id="pzzlr-017">One Egg or Two..?</a></li>
-              <li><a href="/#pzzlr-018" id="pzzlr-018">Return to Me!</a></li>
-              <li><a href="/#pzzlr-019" id="pzzlr-019">Implicitly Surprising</a></li>
-              <li><a href="/#pzzlr-020" id="pzzlr-020">One Bound, Two to Go</a></li>
-              <li><a href="/#pzzlr-021" id="pzzlr-021">Views From the Top</a></li>
-              <li><a href="/#pzzlr-022" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
-              <li><a href="/#pzzlr-023" id="pzzlr-023">Information Overload</a></li>
-              <li><a href="/#pzzlr-024" id="pzzlr-024">What's In a Name?</a></li>
-              <li><a href="/#pzzlr-025" id="pzzlr-025">$!.*% Iterators!</a></li>
-              <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
-              <li><a href="/#pzzlr-027" id="pzzlr-027">I Can Has Padding?</a></li>
-              <li><a href="/#pzzlr-028" id="pzzlr-028">Cast Away</a></li>
-              <li><a href="/#pzzlr-029" id="pzzlr-029">Pick an Int, Any Int!</a></li>
-              <li><a href="/#pzzlr-030" id="pzzlr-030">Double Trouble</a></li>
-              <li class="divider"></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->	
-
-        <div id="prime-space" class="span9">
-	  <div class="headline-unit">
-	    <h2>Contact</h2>
-            <p>
-	      If you would like to stay up-to-date with newly added puzzlers, follow us on <a href="http://twitter.com/#!/ScalaPuzzlers">
+<div class="headline-unit">
+  <h2>Contact</h2>
+  <p>
+    If you would like to stay up-to-date with newly added puzzlers, follow us on <a href="http://twitter.com/#!/ScalaPuzzlers">
 		<img src="img/twitter.png" alt="twitter" style="padding-bottom:10px;padding-left:2px;"/></a>
-		<br/><br/>
-	      For feedback and general inquiries you can reach us by <a href="mailto:contact@scalapuzzlers.com">email</a>
-            </p>
-          </div> 
-          <footer class="footer">
-             Copyright &copy; 2013, Andrew Phillips and Nermin Serifovic
-	  </footer>        
-	</div>
-      </div>
-    </div>
-  
-  </body>
-</html>
+  </p>
+
+  <p>
+    For feedback and general inquiries you can reach us by <a href="mailto:contact@scalapuzzlers.com">email</a>
+  </p>
+</div> 
