--- a/contribute.html
+++ b/contribute.html
@@ -138,6 +138,7 @@
               <li><a href="/#pzzlr-032" id="pzzlr-032">Type Extortion</a></li>
               <li><a href="/#pzzlr-034" id="pzzlr-034">All's Well That Folds Well</a></li>
               <li><a href="/#pzzlr-035" id="pzzlr-035">A Case of Strings</a></li>
+              <li><a href="/#pzzlr-036" id="pzzlr-036">Adaptive Reasoning</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
