--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
               <li><a href="#" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li><a href="#" id="pzzlr-030">Double Trouble</a></li>
               <li><a href="#" id="pzzlr-032">Type Extortion</a></li>
+              <li><a href="#" id="pzzlr-033">Implicit Kryptonite</a></li>
               <li><a href="#" id="pzzlr-034">All's Well That Folds Well</a></li>
               <li><a href="#" id="pzzlr-035">A Case of Strings</a></li>
               <li><a href="#" id="pzzlr-036">Adaptive Reasoning</a></li>
