--- a/contribute.html
+++ b/contribute.html
@@ -136,6 +136,7 @@
               <li><a href="/#pzzlr-029" id="pzzlr-029">Pick an Int, Any Int!</a></li>
               <li><a href="/#pzzlr-030" id="pzzlr-030">Double Trouble</a></li>
               <li><a href="/#pzzlr-032" id="pzzlr-032">Type Extortion</a></li>
+              <li><a href="/#pzzlr-033" id="pzzlr-033">Implicit Kryptonite</a></li>
               <li><a href="/#pzzlr-034" id="pzzlr-034">All's Well That Folds Well</a></li>
               <li><a href="/#pzzlr-035" id="pzzlr-035">A Case of Strings</a></li>
               <li><a href="/#pzzlr-036" id="pzzlr-036">Adaptive Reasoning</a></li>
