--- a/puzzlers/pzzlr-001.html
+++ b/puzzlers/pzzlr-001.html
@@ -1,3 +1,6 @@
+---
+layout: kata
+---
 <div id="title">
   <h1>Hi There!</h1>
 </div>
@@ -70,7 +73,7 @@ List[Int] = List(2, 3)
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
-<div id="explanation" class="explanation" style="display:none">
+<div id="explanation" class="explanation">
   <h3>Explanation</h3>
   <p>
 	Even though the _ simplification looks the same, in the second case 
