--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ layout: default
     <div class="row-fluid">
       <div class="span6 headline-unit">
        <h2>Your contributions are welcomed</h2>
-       <p>Scala Puzzlers is a community effort! Have a puzzler you would like to share with the rest of the Scala community?  Please follow <a href="/{{ site.baseurl }}/contribute.html">these instructions</a> to submit your puzzler. And don't worry, you will be properly credited for your contribution!</p>
+       <p>Scala Puzzlers is a community effort! Have a puzzler you would like to share with the rest of the Scala community?  Please follow <a href="{{ site.baseurl }}/contribute.html">these instructions</a> to submit your puzzler. And don't worry, you will be properly credited for your contribution!</p>
       </div>    
       <div class="span6 headline-unit">
        <h2>We would love to hear from you</h2>
-       <p>Any kind of feedback is appreciated, about the website but also about the puzzlers themselves. If there is something you would like to let us know, please <a href="/{{ site.baseurl }}/contact.html">contact us</a>.</p>
+       <p>Any kind of feedback is appreciated, about the website but also about the puzzlers themselves. If there is something you would like to let us know, please <a href="{{ site.baseurl }}/contact.html">contact us</a>.</p>
       </div>
      </div>
   </div>
