--- a/puzzlers/007-arg-arrgh.html
+++ b/puzzlers/007-arg-arrgh.html
@@ -20,21 +20,21 @@ puzzle: |
 possibleSolutions:
   a:
     text: The first, second and third fail with compilation errors, the fourth prints
-    code: Int = 16
+    code: 16
   b:
     text: All four fail with compilation errors
   c:
     text: The second and fourth fail with compilation errors, the first and third print
     code: |
-      Int = 16
-      Int = 16
+      16
+      16
   d:
     text: Prints
     code: |
-      Int = 16
-      Int = 16
-      Int = 16
-      Int = 16
+      16
+      16
+      16
+      16
 solution: a
 explanation: |
   For <tt>square</tt> to be applicable as an argument, the compiler has to know that <tt>T</tt> is bound to (a type that can implicitly be converted to) a Numeric. Even though it would appear that 2, as an Int, obviously fulfills this  condition, that information is not available to the compiler in a multi-arg list. Only in the fourth version is <tt>T</tt> bound "sufficiently early" for <tt>square</tt> to be allowed.
