contribution explanation + kata
kata form open in new window when javascript is off
put back resize handle to split code with result
contribution explanation
keyboard shortcut to run

--- a/contribute.html
+++ b/contribute.html
@@ -7,14 +7,11 @@ layout: default
   <ol>
     <li>Fork our <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com">github repo</a></li>
     <li>
-      In <code>puzzlers</code> directory, you will find a file called <code>pzzlr-template.html</code>. 
-      Make a copy of it, following the naming convention: <code>pzzlr-???.html</code>. The three digit puzzler number 
-      should be the next increment of the latest puzzler in the repository. You might need to check the open 
-      <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com/pulls">pull requests</a> 
-      to ensure the number is not already taken.
+      In <code>puzzlers</code> directory, you will find a file called <code>_template.html</code>. It contains the yaml syntax expected by the <code>_layout/puzzler.html</code>.
+      Make a copy of the <code>_empty_template.html</code> so you can start from scratch.
     </li>
     <li>
-      In your newly created puzzler HTML file replace every occurence of the word <em>PLACEHOLDER</em>&nbsp;&nbsp;with your own content. This should require only a minimum knowledge of HTML. Try to keep it simple, but feel free to get creative if your puzzler warrants some more sophisticated presentation. If unsure, please use other puzzler HTML files as a reference.
+      When you are done, rename it following the naming convention: <code>pzzlr-???.html</code>. The three digit puzzler number should be the next increment of the latest puzzler in the repository. You might need to check the open <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com/pulls">pull requests</a> to ensure the number is not already taken.
     </li>
     <li>
       Commit and push your puzzler HTML file (not the template) to github. Then issue a pull request. That's it! 
