errata + kata select errors

--- a/puzzlers/016-self-see-self.html
+++ b/puzzlers/016-self-see-self.html
@@ -21,7 +21,7 @@ possibleSolutions:
   c:
     text: The first fails at runtime with a NullPointerException the second prints 8
   d:
-    test: Both fail with compilation exceptions
+    text: Both fail with compilation exceptions
 solution: c
 explanation: |
   <p>
